--- a/outputs/example.config
+++ b/outputs/example.config
@@ -1,15 +1,14 @@
 
 class Config:
-    ### Configuration
 
     ## Size and Shape of Regions
 
     # Canvas size 
-    canvasWidthPx = 500
-    canvasHeightPx = 500
+    canvasWidthPx = 5000
+    canvasHeightPx = 5000
 
     # average size of region
-    regionSizePx = 20
+    regionSizePx = 200
 
     # Regularity of region Lower = more irregular.
     # canvasSize/regionSize is the most reasonable minimum regularity otherwise the 
@@ -20,20 +19,31 @@ class Config:
     ## Fade and Coloring
 
     # List of colors
-    colorList = ['black', 'lightgray', 'darkgray', 'none']
+    # These colors will be randomly distributed when fadeEnabled is set to false.
+    # When fadeEnabled is set to true the first and last colors will be at the 
+    # edge and the others (known as "fade colors") will be randomly distributed
+    # in the fade region.
+    # example input formats -> https://www.w3.org/TR/SVGColor12/#sRGBcolor
+    # predef color list -> https://www.december.com/html/spec/colorsvg.html
+    colorList = ['#FFFFFF', '#808080', '#606060', '#202020']
 
     # Enabled Fade Coloring
     fadeEnabled = True
 
-    # Fade diffusion, how far past the outside of its region do we expect to see 
-    # a given color (0 very little, no real maximum)
+    # Fade diffusion, how far outside of its region do we expect to see a given color
+    # From 0 to 2 seems to be the reasonable values.
     fadeDiffusion = 0.4
 
-    # Size of fade region relative to the size of the whole image (1 = across full image, 0 = very centre only)
+    # Size of fade region relative to the size of the whole image 
+    # 1 = across full image, 0 = very centre only
+    # Can also be thought of as the probability of the fade colors appearing.
     fadeSize = 0.5
 
-    ### Calculations
-    #xDim
+
+
+
+
+    ### DO NOT EDIT THESE ###
     xNumRegions = round(canvasWidthPx / regionSizePx)
     yNumRegions = round(canvasHeightPx / regionSizePx)
     totalNumRegions = xNumRegions * yNumRegions
